--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
     <head>
         <title>Search</title>
+        <style> 
+             input {
+                color:blue;
+                text-align:center;
+             }
+        </style>
     </head>
     <body>
         <form action="https://www.google.com/search">
