--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
         <title>Search</title>
         <style> 
              input {
-                color:blue;
                 text-align:center;
+             }
+
+             bar{
+                border-radius: 50px;
+                border: 2px solid gainsboro;
              }
         </style>
     </head>
     <body>
         <form action="https://www.google.com/search">
-            <input type="text" name="q">
+            <input id "bar" type="text" name="q">
             <input type="submit" value="Google Search">
         </form>
     </body>
