More css on search bar

--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
                 text-align:center;
              }
 
-             bar{
+             input [type=text]{
+                width: 100%;
+                box-sizing: border-box;
+                margin: 8px 0;
                 border-radius: 50px;
                 border: 2px solid gainsboro;
              }
+
         </style>
     </head>
     <body>
         <form action="https://www.google.com/search">
-            <input id "bar" type="text" name="q">
+            <input type="text" name="q">
             <input type="submit" value="Google Search">
         </form>
     </body>
