--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                 margin: 8px 0;
                 border-radius: 50px;
                 border: 2px solid gainsboro;
+                color:green;
              }
 
         </style>
