--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Search</title>
         <style> 
-             input [type=text]{
+             input{
                 width: 100%;
                 box-sizing: border-box;
                 margin: 8px 0;
