real test starting working

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
         <title>Search</title>
         <style> 
              input[type=text]{
-                width: 100%;
+                width: 50%;
+                height: 30%;
                 box-sizing: border-box;
                 margin: 8px 0;
                 border-radius: 50px;
                 border: 2px solid gainsboro;
                 color:green;
+                align-items: center;
              }
         </style>
     </head>
