--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 border-radius: 50px;
                 border: 2px solid gainsboro;
                 color:green;
-                align-items: center;
+                align-self: center;
              }
         </style>
     </head>
