--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
         <style> 
              input[type=text]{
                 width: 50%;
-                height: 30%;
+                height: 100%;
                 box-sizing: border-box;
-                margin: 8px 0;
+                margin: auto;
                 border-radius: 50px;
                 border: 2px solid gainsboro;
                 color:green;
-                align-self: center;
+                background-image: url('searchicon.png');
+                align: center;
              }
         </style>
     </head>
     <body>
         <form action="https://www.google.com/search">
-            <input type="text" name="q">
+            <input type="text" name="q" placeholder="Search..">
             <input type="submit" value="Google Search">
         </form>
     </body>
