--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Search</title>
         <style> 
-             input[type=text]{
+             .center {
                 width: 50%;
                 height: 300%;
                 box-sizing: border-box;
@@ -17,7 +17,7 @@
     </head>
     <body>
         <form action="https://www.google.com/search">
-            <input type="text" name="q" placeholder="Search..">
+            <input type="text" class "center" name="q" placeholder="Search..">
             <input type="submit" value="Google Search">
         </form>
     </body>
