--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
     <head>
         <title>Search</title>
         <style> 
-             input[type=text] {
+              input[type=text]{
+                width: 100%;
                 width: 50%;
-                height: 300%;
+                height: 30%;
                 box-sizing: border-box;
-                margin: auto;
+                margin: 8px 0;
                 border-radius: 50px;
                 border: 2px solid gainsboro;
+                text-align: center;
              }
         </style>
     </head>
