--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 box-sizing: border-box;
                 margin: 8px 0;
                 border-radius: 50px;
-                border: 2px solid gainsboro;
+                border: 2px solid red;
              }
         </style>
     </head>
