--- a/index.html
+++ b/index.html
@@ -2,17 +2,7 @@
 <html lang="en">
     <head>
         <title>Search</title>
-        <style> 
-              input[type=text]{
-                width: 100%;
-                width: 50%;
-                height: 130%;
-                box-sizing: border-box;
-                margin: 8px 0;
-                border-radius: 50px;
-                border: 2px solid red;
-             }
-        </style>
+        <link rel="stylesheet" href="luanalborba/search/style.css"> 
     </head>
     
     <body>
