--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Search</title>
-        <link rel="stylesheet" href="luanalborba/search/style.css"> 
+        <link rel="stylesheet" href="style.css"> 
     </head>
     
     <body>
