--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <body>
         <form action="https://www.google.com/search">
-             <input type="text" name="q" placeholder="Search..">
+             <input type="text" class "center" name="q" placeholder="Search..">
              <input type="submit" value="Google Search">
         </form>
     </body>
