--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <form action="https://www.google.com/search">
              <input type="text" class="center" name="q" placeholder="Search..">
-            
+             <input type="submit" value="Google Search">
         </form>
     </body>
 </html>
