--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     
     <body>
         <form action="https://www.google.com/search">
-             <input type="text" class="center" name="q" placeholder="Search..">
-             <input type="submit" value="Google Search">
+            <div class="box">
+               <input type="text" class="center" name="q" placeholder="Search..">
+               <input type="submit" value="Google Search">
+            </div>
         </form>
     </body>
 </html>
