--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     </head>
     
     <body>
-        <form action="https://www.google.com/search">
-            <div class="box">
-               <input type="text" class="center" name="q" placeholder="Search..">
-               <input type="submit" value="Google Search">
-            </div>
-        </form>
+        <div class="container">
+            <form action="https://www.google.com/search">
+                <div class="center">
+                   <input type="text"  name="q" placeholder="Search..">
+                </div>
+                <div class="row">
+                   <input type="submit" value="Google Search">
+                </div>
+             </form>
+
+    </div>
     </body>
 </html>
