--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="container">
             <form action="https://www.google.com/search">
                 <div class="center">
-                   <input type="text"  name="q">
+                   <input type="text"  name="q" placeholder="Search..">
                 </div>
                 <div class="row">
                    <input type="submit" value="Google Search">
