--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
             <form action="https://www.google.com/search">
                 <div class="center">
                    <input type="text"  name="q" placeholder="Search..">
-                   
+
                 </div>
                 <div class="row">
                    <input type="submit" value="Google Search">
                 </div>
+                <div class="row">
+                    <input type="submit" value="I´m Feeling Lucky">
+                 </div>
              </form>
 
     </div>
