--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
                    <input type="text"  name="q" placeholder="Search..">
 
                 </div>
-                <div class="row">
+                <div class="row1">
                    <input type="submit" value="Google Search">
                 </div>
-                <div class="row">
-                    <input type="submit" value="I´m Feeling Lucky">
+                <div class="row2">
+                    <input type="submit" value="I’m Feeling Lucky">
                  </div>
              </form>
 
