--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
                    <input type="text"  name="q" placeholder="Search..">
 
                 </div>
-                <div class="row1">
-                   <input type="submit" value="Google Search">
-                </div>
-                <div class="row2">
-                    <input type="submit" value="I’m Feeling Lucky">
-                 </div>
+                <div class"bottons">
+                    <div class="row1">
+                       <input type="submit" value="Google Search">
+                    </div>
+                    <div class="row2">
+                       <input type="submit" value="I’m Feeling Lucky">
+                    </div>
+                </div>    
              </form>
 
     </div>
