--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                    <input type="text"  name="q" placeholder="Search..">
 
                 </div>
-                <div class"bottons">
+                <div class="bottons">
                     <div class="row1">
                        <input type="submit" value="Google Search">
                     </div>
